# function-calling-fine-tuning

./: .gitignore  CODEX_CONTEXT.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt
configs/: experiment_registry.yaml
docs/: ec2_instance_policy.md  experiment_contract.md  fine_tuning_artifact_retention.md  fine_tuning_final_report.md
evaluation/: README.md
infrastructure/: README.md
scripts/: __init__.py  audit_exp00_completion.py  audit_exp09_loss_masks.py  audit_launch_template.sh  audit_xlam_leakage.py  bootstrap_instance.sh  build_exp00_source_bundle.sh  build_no_tool_relevance_set.py  calculate_checksums.py  check_split_access.py  cleanup_fine_tuning_s3.py  collect_run_metadata.py  compare_curator_exact_dedup.py  compare_evaluations.py  create_fine_tuning_closure.py  curate_xlam_groups.py  download_xlam.py  evaluate.py  freeze_xlam_splits.py  generate_predictions.py  inspect_automodel_package.py  inspect_lora_targets.py  inspect_loss_mask.py  inspect_template.py  inspect_xlam.py  migrate_smoke_run_metadata.py  normalize_xlam.py  normalize_xlam_full.py  probe_automodel_loss_masking.py  probe_full_sft_runtime.py  publish_eval_dataset.sh  publish_exp00_source_bundle.sh  reload_check.py  reload_full_sft_check.py  render_prompt_hashes.py  resolve_exp00_config.py  run_automodel_container.sh  run_curator_exact_dedup_docker.sh  run_exp02_matrix.py  run_exp03_reference_lora.py  (+32 more)
tests/: test_activation_checkpointing.py  test_curation.py  test_evaluation.py  test_evaluation_compare.py  test_evaluation_report.py  test_exp00_completion.py  (+22 more)
(+112 files in other folders)
